add the new lines

--- a/index.html
+++ b/index.html
@@ -7,6 +7,76 @@
     <title>Form</title>
 </head>
 <body>
+
+    <hr style="margin-top: 25px;" width="100%" size="2"> <br>
+
+    <label for="panda">Search your Image here:
+        <input style="height: 3.5vh;" type="text" name="" id="panda">
+        <input  style="padding-left: 5px;font-size: 16px;padding-right: 5px;" type="button" value="Search">
+    </label><br>
+
+    <img src="panda.jfif" alt="Panda" width="260px" height="240px">
+    <br>
+
+    <a href="https://www.google.com/search?q=images+for+panda&sca_esv=00e485a4403845c8&udm=2&prmd=ivnmbz&source=lnms&sa=X&ved=2ahUKEwjbzcyIp6SGAxVYd2wGHTmQCN0Q0pQJegQIAxAE&biw=1360&bih=641&dpr=1" target="_blank" >For more click here</a>
+    <hr width="100%" size="2" style="margin-top: 10px;">
+    <br>
+    <form> 
+        <h3>Feedback Form</h3>
+        <label for="name">
+            Name: <br>
+            <input type="text" name="" id="name" style="height: 4vh;width: 270px;">
+        </label><br>
+        <label for="date">
+            Date: <br>
+            <input type="date" name="" id="date" style="width:180px;height: 5vh;">
+        </label><br>
+        <label for="comment">
+            Comment</label><br>
+            <textarea name="" id="" cols="60" rows="5"></textarea>
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+    </form><br>
+
+    <footer>
+
+        <input style="padding-left: 5px;padding-right: 5px;font-size: 18px;" type="submit" value="Submit">
+    </footer>
+
     
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 </body>
 </html>
