add the new lines

--- a/index.html
+++ b/index.html
@@ -12,16 +12,16 @@
 
     <label for="panda">Search your Image here:
         <input style="height: 3.5vh;" type="text" name="" id="panda">
-        <input  style="padding-left: 5px;font-size: 16px;padding-right: 5px;" type="button" value="Search">
+        <input  style="padding-left: 5px;font-size: 16px;padding-right: 5px;height: 3.5vh;" type="button" value="Search">
     </label><br>
 
     <img src="panda.jfif" alt="Panda" width="260px" height="240px">
     <br>
 
-    <a href="https://www.google.com/search?q=images+for+panda&sca_esv=00e485a4403845c8&udm=2&prmd=ivnmbz&source=lnms&sa=X&ved=2ahUKEwjbzcyIp6SGAxVYd2wGHTmQCN0Q0pQJegQIAxAE&biw=1360&bih=641&dpr=1" target="_blank" >For more click here</a>
+    <a href="https://www.google.com/search?q=images+for+panda&sca_esv=00e485a4403845c8&udm=2&prmd=ivnmbz&source=lnms&sa=X&ved=2ahUKEwjbzcyIp6SGAxVYd2wGHTmQCN0Q0pQJegQIAxAE&biw=1360&bih=641&dpr=1" target="_blank"  >For more click here</a>
     <hr width="100%" size="2" style="margin-top: 10px;">
     <br>
-    <form> 
+    <form action="thanksform.html" method="get" > 
         <h3>Feedback Form</h3>
         <label for="name">
             Name: <br>
