--- a/formjhankar.html
+++ b/formjhankar.html
@@ -34,7 +34,7 @@
     </table><br><br>
 
 
-       <form>
+       <form action="thanks form.html" method="get">
     <label for="option">Rate The Stories:<br>
     <select name="" id="option">
         <option value="Good">Good</option>
