--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
     <a href="https://www.google.com/search?q=images+for+panda&sca_esv=00e485a4403845c8&udm=2&prmd=ivnmbz&source=lnms&sa=X&ved=2ahUKEwjbzcyIp6SGAxVYd2wGHTmQCN0Q0pQJegQIAxAE&biw=1360&bih=641&dpr=1" target="_blank"  >For more click here</a>
     <hr width="100%" size="2" style="margin-top: 10px;">
     <br>
-    <form action="thanksform.html" method="get" > 
+    <form> 
         <h3>Feedback Form</h3>
         <label for="name">
             Name: <br>
